--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+sqlalchemy = "^2.0.37"
+psycopg2 = "^2.9.10"
+pydantic = "^2.10.6"
 
 
 [build-system]
